cmake_minimum_required(VERSION 3.17)
project(CPP_Learning_github)

set(CMAKE_CXX_STANDARD 98)

add_executable(CPP_Learning_github main.cpp grammar/Variables.cpp grammar/Variables.h grammar/Range.cpp grammar/Range.h grammar/Function.cpp grammar/Function.h grammar/Constant.cpp grammar/Constant.h grammar/Condition.cpp grammar/Condition.h grammar/Loop.cpp grammar/Loop.h practice/打印图形/Triangle.cpp practice/打印图形/Triangle.h practice/打印图形/sb.cpp practice/打印图形/sb.h grammar/Printf.cpp grammar/Printf.h practice/CCF/P1001.cpp practice/CCF/P1001.h practice/CCF/P1002.cpp practice/CCF/P1002.h)